modules/networking/main.tf
locals {
  # Loop over var.azs using the index (indx) to pick the CIDR for that AZ
  az_index_map = { for indx, az in var.azs : az => indx }

  nat_enabled = var.egress_mode != "vpc_endpoints_only"
}

# CREATE MAIN VPC
resource "aws_vpc" "main" {
  cidr_block           = var.main_vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name        = "${var.name_prefix}-Main"
    Environment = var.environment
    Terraform   = "true"
  }
}

# CREATE SUBNETS
## INGRESS PUBLIC SUBNETS
resource "aws_subnet" "ingress_public" {
  for_each = local.az_index_map

  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.subnet_cidrs.ingress_public[each.value]
  availability_zone       = each.key
  map_public_ip_on_launch = false

  tags = {
    Name        = "${var.name_prefix}-Ingress-Public-${each.key}"
    Environment = var.environment
    Terraform   = "true"
  }
}

## EGRESS PUBLIC SUBNETS
resource "aws_subnet" "egress_public" {
  for_each = local.az_index_map

  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.subnet_cidrs.egress_public[each.value]
  availability_zone       = each.key
  map_public_ip_on_launch = false

  tags = {
    Name        = "${var.name_prefix}-Egress-Public-${each.key}"
    Environment = var.environment
    Terraform   = "true"
  }
}

## COMPUTE PRIVATE SUBNETS
resource "aws_subnet" "compute_private" {
  for_each = local.az_index_map

  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.subnet_cidrs.compute_private[each.value]
  availability_zone       = each.key
  map_public_ip_on_launch = false

  tags = {
    Name        = "${var.name_prefix}-Compute-Private-${each.key}"
    Environment = var.environment
    Terraform   = "true"
  }
}

## DATA PRIVATE SUBNETS
resource "aws_subnet" "data_private" {
  for_each = local.az_index_map

  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.subnet_cidrs.data_private[each.value]
  availability_zone       = each.key
  map_public_ip_on_launch = false

  tags = {
    Name        = "${var.name_prefix}-Data-Private-${each.key}"
    Environment = var.environment
    Terraform   = "true"
  }
}

## SERVERLESS PRIVATE SUBNETS
resource "aws_subnet" "serverless_private" {
  for_each                = local.az_index_map
  map_public_ip_on_launch = false

  vpc_id            = aws_vpc.main.id
  cidr_block        = var.subnet_cidrs.serverless_private[each.value]
  availability_zone = each.key

  tags = {
    Name        = "${var.name_prefix}-Serverless-Private-${each.key}"
    Environment = var.environment
    Terraform   = "true"
  }
}

## FIREWALL PRIVATE SUBNETS
resource "aws_subnet" "firewall_private" {
  for_each                = local.az_index_map
  map_public_ip_on_launch = false

  vpc_id            = aws_vpc.main.id
  cidr_block        = var.subnet_cidrs.firewall_private[each.value]
  availability_zone = each.key

  tags = {
    Name        = "${var.name_prefix}-Firewall-Private-${each.key}"
    Environment = var.environment
    Terraform   = "true"
  }
}

## VPC ENDPOINT SUBNETS
resource "aws_subnet" "endpoint_private" {
  for_each                = local.az_index_map
  map_public_ip_on_launch = false

  vpc_id            = aws_vpc.main.id
  cidr_block        = var.subnet_cidrs.endpoint_private[each.value]
  availability_zone = each.key

  tags = {
    Name        = "${var.name_prefix}-Endpoint-Private-${each.key}"
    Environment = var.environment
    Terraform   = "true"
  }
}

# CREATE IGW, EIP, and NATGW
## IGW
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name        = "${var.name_prefix}-IGW"
    Environment = var.environment
    Terraform   = "true"
  }
}

## EIP
resource "aws_eip" "nat" {
  for_each = local.nat_enabled ? local.az_index_map : {}
  domain   = "vpc"

  tags = {
    Name        = "${var.name_prefix}-NAT-EIP-${each.key}"
    Environment = var.environment
    Terraform   = "true"
  }
}

## NATGW
resource "aws_nat_gateway" "natgw" {
  for_each = local.nat_enabled ? local.az_index_map : {}

  allocation_id = aws_eip.nat[each.key].id
  subnet_id     = aws_subnet.egress_public[each.key].id

  depends_on = [aws_internet_gateway.igw]

  tags = {
    Name        = "${var.name_prefix}-NAT-Gateway-${each.key}"
    Environment = var.environment
    Terraform   = "true"
  }
}

# CREATE AND ASSOCIATE ROUTE TABLES
## PUBLIC ROUTE TABLES
resource "aws_route_table" "ingress_public" {
  for_each = local.az_index_map
  vpc_id   = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  tags = {
    Name        = "${var.name_prefix}-Ingress-Public-RT-${each.key}"
    Environment = var.environment
    Terraform   = "true"
  }
}

resource "aws_route_table" "egress_public" {
  for_each = local.az_index_map
  vpc_id   = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }

  dynamic "route" {
    for_each = var.egress_mode == "network_firewall" ? [1] : []

    content {
      cidr_block = var.subnet_cidrs.compute_private[each.value]

      vpc_endpoint_id = (
        var.firewall_endpoint_ids_by_az[each.key]
      )
    }
  }

  lifecycle {
    precondition {
      condition = (
        var.egress_mode != "network_firewall" ||
        contains(
          keys(var.firewall_endpoint_ids_by_az),
          each.key,
        )
      )

      error_message = "'firewall_endpoint_ids_by_az' must contain an endpoint ID for each AZ when 'egress_mode' is 'network_firewall'"
    }
  }

  tags = {
    Name        = "${var.name_prefix}-Egress-Public-RT-${each.key}"
    Environment = var.environment
    Terraform   = "true"
  }
}

## PUBLIC ROUTE TABLE ASSOCIATION
resource "aws_route_table_association" "ingress_public" {
  for_each = local.az_index_map

  route_table_id = aws_route_table.ingress_public[each.key].id
  subnet_id      = aws_subnet.ingress_public[each.key].id
}

resource "aws_route_table_association" "egress_public" {
  for_each = local.az_index_map

  route_table_id = aws_route_table.egress_public[each.key].id
  subnet_id      = aws_subnet.egress_public[each.key].id
}

## PRIVATE ROUTE TABLES

### COMPUTE PRIVATE SUBNET ROUTE TABLE PER AZ
resource "aws_route_table" "compute_private" {
  for_each = local.az_index_map
  vpc_id   = aws_vpc.main.id

  tags = {
    Name        = "${var.name_prefix}-Compute-Private-RT-${each.key}"
    Environment = var.environment
    Terraform   = "true"
  }
}

resource "aws_route" "compute_default_to_firewall" {
  for_each = var.egress_mode == "network_firewall" ? local.az_index_map : {}

  route_table_id         = aws_route_table.compute_private[each.key].id
  destination_cidr_block = "0.0.0.0/0"

  vpc_endpoint_id = var.firewall_endpoint_ids_by_az[each.key]

  lifecycle {
    precondition {
      condition     = contains(keys(var.firewall_endpoint_ids_by_az), each.key)
      error_message = "'firewall_endpoint_ids_by_az' must contain an endpoint ID for each AZ when 'egress_mode' is 'network_firewall'"
    }
  }
}

resource "aws_route" "compute_default_to_nat" {
  for_each = var.egress_mode == "nat_only" ? local.az_index_map : {}

  route_table_id         = aws_route_table.compute_private[each.key].id
  destination_cidr_block = "0.0.0.0/0"

  nat_gateway_id = aws_nat_gateway.natgw[each.key].id
}

### FIREWALL PRIVATE ROUTE TABLE PER AZ
resource "aws_route_table" "firewall_private" {
  for_each = local.az_index_map
  vpc_id   = aws_vpc.main.id

  tags = {
    Name        = "${var.name_prefix}-Firewall-Private-RT-${each.key}"
    Environment = var.environment
    Terraform   = "true"
  }
}

resource "aws_route" "firewall_private" {
  for_each = var.egress_mode == "network_firewall" ? local.az_index_map : {}

  route_table_id         = aws_route_table.firewall_private[each.key].id
  destination_cidr_block = "0.0.0.0/0"

  nat_gateway_id = aws_nat_gateway.natgw[each.key].id
}

### ENDPOINT PRIVATE ROUTE TABLE PER AZ
resource "aws_route_table" "endpoint_private" {
  for_each = local.az_index_map
  vpc_id   = aws_vpc.main.id

  tags = {
    Name        = "${var.name_prefix}-Endpoint-Private-RT-${each.key}"
    Environment = var.environment
    Terraform   = "true"
  }
}

### DATA PRIVATE ROUTE TABLE PER AZ
resource "aws_route_table" "data_private" {
  for_each = local.az_index_map
  vpc_id   = aws_vpc.main.id

  tags = {
    Name        = "${var.name_prefix}-Data-Private-RT-${each.key}"
    Environment = var.environment
    Terraform   = "true"
  }
}

### SERVERLESS PRIVATE ROUTE TABLE PER AZ
resource "aws_route_table" "serverless_private" {
  for_each = local.az_index_map
  vpc_id   = aws_vpc.main.id

  tags = {
    Name        = "${var.name_prefix}-Serverless-Private-RT-${each.key}"
    Environment = var.environment
    Terraform   = "true"
  }
}

## PRIVATE ROUTE TABLE ASSOCIATIONS
resource "aws_route_table_association" "compute_private" {
  for_each = local.az_index_map

  route_table_id = aws_route_table.compute_private[each.key].id
  subnet_id      = aws_subnet.compute_private[each.key].id
}

resource "aws_route_table_association" "firewall_private" {
  for_each = local.az_index_map

  route_table_id = aws_route_table.firewall_private[each.key].id
  subnet_id      = aws_subnet.firewall_private[each.key].id
}

resource "aws_route_table_association" "endpoint_private" {
  for_each = local.az_index_map

  route_table_id = aws_route_table.endpoint_private[each.key].id
  subnet_id      = aws_subnet.endpoint_private[each.key].id
}

resource "aws_route_table_association" "data_private" {
  for_each = local.az_index_map

  route_table_id = aws_route_table.data_private[each.key].id
  subnet_id      = aws_subnet.data_private[each.key].id
}

resource "aws_route_table_association" "serverless_private" {
  for_each = local.az_index_map

  route_table_id = aws_route_table.serverless_private[each.key].id
  subnet_id      = aws_subnet.serverless_private[each.key].id
}
